<resources>
    <string name="app_name">Homework</string>
    <string name="homework_2">homework 2</string>
    <string name="homework_3">homework 3</string>
    <string name="homework_4">homework 4</string>
    <string name="homework_5">homework 5</string>
    <string name="homework_6">homework 6</string>
    <string name="homework_7">homework 7</string>
    <string name="homework_8">homework 8</string>
    <string name="homework_9">homework 9</string>
</resources>