<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="#66CCFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_2"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/homework_2"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/homework_3"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/homework_4"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/homework_5"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/homework_6"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/homework_7"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="45dp"
            android:text="@string/homework_8"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>